--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -1,3 +1,34 @@
 @import "~bootstrap/scss/functions";
 @import "./helpers/_variables";
 @import "~bootstrap/scss/bootstrap";
+
+.page-item{
+  &.disabled{
+    cursor: not-allowed;
+  }
+}
+
+.loadingFrame {
+  width: 100%;
+  height: 60vh;
+  position: relative;
+}
+
+.noData{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  img{
+    margin-top: 10vh;
+    display: inline-block;
+    width: 15vh;
+    height: 15vh;
+  }
+  span{
+    margin-top: 2vh;
+    font-weight: bold;
+    font-size: 2.5em;
+    margin-left: 1.5vw;
+  }
+}
